blocks/profile.css
.profile {
  display: flex;
  align-items: center;
  padding-top: 62px;
}

.profile__image {
  margin-right: 24px;
  height: 120px;
  width: 120px;
  border-radius: 50%;
  object-fit: cover;
  background-position: center;
}

.profile__info {
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.profile__title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 18px;
}

.profile__title {
  margin: 0;
  font-size: 42px;
  line-height: 48px;
  font-weight: 500;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 373px;
}

.profile__button-edit {
  background: transparent url(../images/pencil.svg) center no-repeat;
  height: 24px;
  width: 24px;
  border: 1px solid white;
  cursor: pointer;
}

.profile__button-edit:hover {
  opacity: 0.6;
}
.profile__description {
  margin: 0;

  font-size: 18px;
  line-height: 22px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 373px;
}

.profile__button-add {
  background: transparent url("../images/plus.svg") center no-repeat;
  width: 150px;
  height: 50px;
  margin-left: auto;
  border: 2px white solid;
  border-radius: 2px;
  cursor: pointer;
}

.profile__button-add:hover {
  opacity: 0.6;
}

@media screen and (max-width: 878px) {
  .profile {
    padding-left: 20px;
    padding-right: 20px;
  }
}
@media screen and (max-width: 800px) {
  .profile {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 26px;
  }
  .profile__title {
    font-size: 22px;
    line-height: 27px;
    max-width: 200px;
  }

  .profile__image {
    margin-right: 0;
  }
  .profile__info {
    display: flex;
    flex-direction: column;
    gap: 14px;
  }
  .profile__button-edit {
    height: 8px;
    width: 8px;
    background-size: cover;
  }

  .profile__button-add {
    margin: 0;
    width: 282px;
  }

  .profile__description {
    font-size: 14px;
    line-height: 17px;
    text-align: center;
  }
}

